[tool.poetry]
name = "lnprotest"
version = "0.1.0"
description = "Protocol test framework for the Lightning Network"
license = "MIT"
authors = ["Rusty Russell <rusty@rustcorp.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
